fix-word-wrap

--- a/src/components/ui/MapModal.module.css
+++ b/src/components/ui/MapModal.module.css
@@ -45,12 +45,9 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  .rightColumn h2{
-    white-space: nowrap;
-  }
+  
   
   .subTitle{
-    white-space: nowrap;
     width: fit-content;
   }
   
